--- a/Software/Projekt_Rent-A-Field/Projekt_Rent-A-Field/Projekt_Rent-A-Field.csproj
+++ b/Software/Projekt_Rent-A-Field/Projekt_Rent-A-Field/Projekt_Rent-A-Field.csproj
@@ -64,6 +64,12 @@
     <Compile Include="CjenikFrm.Designer.cs">
       <DependentUpon>CjenikFrm.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmPopisRezervacija.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmPopisRezervacija.Designer.cs">
+      <DependentUpon>FrmPopisRezervacija.cs</DependentUpon>
+    </Compile>
     <Compile Include="Korisnik.cs">
       <DependentUpon>PI2306_DB.tt</DependentUpon>
     </Compile>
@@ -137,6 +143,9 @@
     </Compile>
     <EmbeddedResource Include="CjenikFrm.resx">
       <DependentUpon>CjenikFrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmPopisRezervacija.resx">
+      <DependentUpon>FrmPopisRezervacija.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
