Implementirane forme ObrazacZaPrigovoreFrm i NoviObrazacFrm

--- a/Software/Projekt_Rent-A-Field/Projekt_Rent-A-Field/Projekt_Rent-A-Field.csproj
+++ b/Software/Projekt_Rent-A-Field/Projekt_Rent-A-Field/Projekt_Rent-A-Field.csproj
@@ -129,6 +129,18 @@
     <Compile Include="Naslovna.Designer.cs">
       <DependentUpon>Naslovna.cs</DependentUpon>
     </Compile>
+    <Compile Include="NoviObrazacFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NoviObrazacFrm.Designer.cs">
+      <DependentUpon>NoviObrazacFrm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ObrazacZaPrigovoreFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ObrazacZaPrigovoreFrm.Designer.cs">
+      <DependentUpon>ObrazacZaPrigovoreFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="PI2306_DB.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -280,6 +292,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Naslovna.resx">
       <DependentUpon>Naslovna.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NoviObrazacFrm.resx">
+      <DependentUpon>NoviObrazacFrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ObrazacZaPrigovoreFrm.resx">
+      <DependentUpon>ObrazacZaPrigovoreFrm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PojedinacanTreningProgram.resx">
       <DependentUpon>PojedinacanTreningProgram.cs</DependentUpon>
