--- a/Software/Projekt_Rent-A-Field/Projekt_Rent-A-Field/Projekt_Rent-A-Field.csproj
+++ b/Software/Projekt_Rent-A-Field/Projekt_Rent-A-Field/Projekt_Rent-A-Field.csproj
@@ -287,6 +287,7 @@
     <Compile Include="SportskiProstorCjenikFrm.Designer.cs">
       <DependentUpon>SportskiProstorCjenikFrm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Sportski_prostor.code.cs" />
     <Compile Include="Sportski_prostor.cs">
       <DependentUpon>PI2306_DB.tt</DependentUpon>
     </Compile>
