--- a/Software/Projekt_Rent-A-Field/Projekt_Rent-A-Field/Projekt_Rent-A-Field.csproj
+++ b/Software/Projekt_Rent-A-Field/Projekt_Rent-A-Field/Projekt_Rent-A-Field.csproj
@@ -99,6 +99,12 @@
     <Compile Include="DodajTreneraFrm.Designer.cs">
       <DependentUpon>DodajTreneraFrm.cs</DependentUpon>
     </Compile>
+    <Compile Include="DodavanjeSportskogProstoraFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DodavanjeSportskogProstoraFrm.Designer.cs">
+      <DependentUpon>DodavanjeSportskogProstoraFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Dogadaj.cs">
       <DependentUpon>PI2306_DB.tt</DependentUpon>
     </Compile>
@@ -338,6 +344,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DodajTreneraFrm.resx">
       <DependentUpon>DodajTreneraFrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DodavanjeSportskogProstoraFrm.resx">
+      <DependentUpon>DodavanjeSportskogProstoraFrm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="EvidentirajFrm.resx">
       <DependentUpon>EvidentirajFrm.cs</DependentUpon>
