--- a/Software/Projekt_Rent-A-Field/Projekt_Rent-A-Field/Projekt_Rent-A-Field.csproj
+++ b/Software/Projekt_Rent-A-Field/Projekt_Rent-A-Field/Projekt_Rent-A-Field.csproj
@@ -81,6 +81,12 @@
     <Compile Include="AzurirajTreneraFrm.Designer.cs">
       <DependentUpon>AzurirajTreneraFrm.cs</DependentUpon>
     </Compile>
+    <Compile Include="AzuriranjeSportskihProstoraFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AzuriranjeSportskihProstoraFrm.Designer.cs">
+      <DependentUpon>AzuriranjeSportskihProstoraFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="DodajOpremuFrm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -332,6 +338,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AzurirajTreneraFrm.resx">
       <DependentUpon>AzurirajTreneraFrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AzuriranjeSportskihProstoraFrm.resx">
+      <DependentUpon>AzuriranjeSportskihProstoraFrm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CjenikFrm.resx">
       <DependentUpon>CjenikFrm.cs</DependentUpon>
