Ažuriranje forme EvidencijaTerminaFrm

--- a/Software/Projekt_Rent-A-Field/Projekt_Rent-A-Field/App.config
+++ b/Software/Projekt_Rent-A-Field/Projekt_Rent-A-Field/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
   <connectionStrings>
-    <add name="PI2306_DBEntities" connectionString="metadata=res://*/PI2306_DB.csdl|res://*/PI2306_DB.ssdl|res://*/PI2306_DB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=31.147.204.119\PISERVER,1433;initial catalog=PI2306_DB;persist security info=True;user id=PI2306_User;password=3]C%Pw*u;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="PI2306_DBEntities" connectionString="metadata=res://*/PI2306_DB.csdl|res://*/PI2306_DB.ssdl|res://*/PI2306_DB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=31.147.204.119\PISERVER,1433;initial catalog=PI2306_DB;persist security info=True;user id=PI2306_User;password=3]C%Pw*u;MultipleActiveResultSets=True;application name=EntityFramework;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
